assets/scss/organisms/text/_table.scss
.table {
    margin-top: 130px;

    .columns-content {
        margin-top: 70px;
    }

    .column-table {

        @include breakpoint(medium down) {
            margin-top: 40px;
        }

        .title {
            font-weight: $bold;
            text-transform: uppercase;
        }

        .table-item {
            height: 70px;
            margin-top: 50px;
            font-size: 2.5rem;
            padding-bottom: 18px;
            border-bottom: 1px solid $black;

            @include breakpoint(medium down) {
                height: auto;
            }
        }
    }
}

